[tool.poetry]
name = "tensorlink"
version = "0.3.0"
description = "Tensorlink is a decentralized Python library for distributed PyTorch models, providing easy Hugging Face API access and enabling users to share compute resources across a global network."
authors = [
    "Tensorlink Lab <smartnodes-lab@proton.me>",
    "Matthew Hawken",
    "Nikita Vassilyev"
]
readme = "README.md"
packages = [{include = "tensorlink"}]
homepage = "https://tensorlink.io"
documentation = "https://tensorlink.io/docs"
repository = "https://github.com/mattjhawken/tensorlink"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Unix"
]

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^45"
fastapi = "^0.115"
uvicorn = "^0.34"
web3 = "^7.3"
miniupnpc = "^2.2"
psutil = "^7"
requests = "^2.32"
python-dotenv = "^1.0"
tqdm = "^4.66"
torch = "^2.7"
transformers = "^5.5.3"
accelerate = "^1.12"
matplotlib = "^3.9"
networkx = "^3.2"
graphviz = "^0.20"
torchviz = "^0.0.2"
multiprocess = "^0.70"
pydantic = "^2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
coverage = "^7.4.0"
flake8 = "^7.1.1"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
skip-string-normalization = true

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]
max-complexity = 10

[tool.pylint.messages_control]
disable = ["C0111", "R0903"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
